--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -3,23 +3,12 @@
 
 # Generate .xmod file module for common intrinsic libraries
 omni_generate_xmod(
-  TARGET xmod-openacc SOURCE openacc_lib.f90 DEPENDS omni-compiler)
+  TARGET xmod-openacc SOURCE openacc_lib.f90 DEPENDS omni-compiler OUTPUT "openacc.xmod")
 omni_generate_xmod(
-  TARGET xmod-ieee_features SOURCE ieee_features.f90 DEPENDS omni-compiler)
+  TARGET xmod-ieee_features SOURCE ieee_features.f90 DEPENDS omni-compiler OUTPUT "ieee_features.xmod")
 omni_generate_xmod(
-  TARGET xmod-ieee_exceptions SOURCE ieee_exceptions.f90 DEPENDS omni-compiler)
+  TARGET xmod-ieee_exceptions SOURCE ieee_exceptions.f90 DEPENDS omni-compiler OUTPUT "ieee_exceptions.xmod")
 omni_generate_xmod(
-  TARGET xmod-ieee_arithmetic SOURCE ieee_arithmetic.f90 DEPENDS omni-compiler)
+  TARGET xmod-ieee_arithmetic SOURCE ieee_arithmetic.f90 DEPENDS omni-compiler OUTPUT "ieee_arithmetic.xmod")
 
 add_dependencies(xmod-ieee_arithmetic xmod-ieee_exceptions)
-
-# Install in the intrinsic mod directory
-install(
-  FILES
-    ${CMAKE_CURRENT_BINARY_DIR}/openacc.xmod
-    ${CMAKE_CURRENT_BINARY_DIR}/ieee_arithmetic.xmod
-    ${CMAKE_CURRENT_BINARY_DIR}/ieee_exceptions.xmod
-    ${CMAKE_CURRENT_BINARY_DIR}/ieee_features.xmod
-  DESTINATION
-    ${CMAKE_INSTALL_PREFIX}/fincludes
-)
