--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,8 @@ install(
     DIRECTORY ${INT_CLAW_HOME}/
     DESTINATION ${CMAKE_INSTALL_PREFIX}
     FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ)
+install(CODE "execute_process(COMMAND ${Python_EXECUTABLE} ${CMAKE_INSTALL_PREFIX}/etc/${CLAW_PY_CONF_FILE})")
+install(CODE "execute_process(COMMAND rm -rf ${CMAKE_INSTALL_PREFIX}/etc/${CLAW_PY_CONF_FILE})")
 
 # Build OMNI compiler
 if(BUILD_OMNI_XCODEML_TOOLS)
