--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,13 +3,13 @@ sonar.projectName=CLAW XcodeML to XcodeML Translator
 sonar.projectVersion=1.0.1
 sonar.organization=claw-project
 sonar.host.url=https://sonarcloud.io
-sonar.sources=./cx2t/src/claw/
-sonar.java.binaries=./cx2t/src/bin
-sonar.java.libraries=./cx2t/lib/*,./omni-compiler/XcodeML-Common/build/om-common.jar,./omni-compiler/F-BackEnd/build/om-f-back.jar
-sonar.binaries=./cx2t/src/bin,./cx2t/unittest/bin
-sonar.tests=./cx2t/unittest/bin/
+sonar.sources=${env.CLAW_SRC}/cx2t/src/claw/
+sonar.java.binaries=${env.CLAW_BUILD}/build/,${env.CLAW_BUILD}/build/lib/
+sonar.java.libraries=${env.CLAW_BUILD}/build/*.jar,${env.CLAW_BUILD}/build/lib/*.jar,${env.OMNI_HOME}/share/om-common.jar,${env.OMNI_HOME}/share/om-f-back.jar
+sonar.binaries=${env.CLAW_BUILD}/build/,${env.CLAW_BUILD}/build/lib/
+sonar.tests=${env.CLAW_BUILD}/build/
 sonar.dynamicAnalysis=reuseReports
 sonar.exclusions=**/*BaseListener.java,**/ClawParser.java,**/ClawLexer.java,**/ClawListener.java,**/*.java.in,**/*.tokens,**/*.g4,**/TestConstant.java,**/ClawVersion.java
-sonar.junit.reportPaths=./build/reports
+sonar.junit.reportPaths=${env.CLAW_BUILD}/reports
 sonar.core.codeCoveragePlugin=jacoco
-sonar.jacoco.reportPaths=./build/reports/jacoco.exec
+sonar.jacoco.reportPaths=${env.CLAW_BUILD}/reports/jacoco.exec
