Moved common build files

--- a/cx2t/CMakeLists.txt
+++ b/cx2t/CMakeLists.txt
@@ -1,8 +1,10 @@
 # This file is released under terms of BSD license
 # See LICENSE file for more information
 
+set(CX2T_COMMON_DIR "${CMAKE_CURRENT_SOURCE_DIR}/common")
+
 configure_file(
-  ${CMAKE_CURRENT_SOURCE_DIR}/claw.properties.in
+  ${CMAKE_CURRENT_SOURCE_DIR}/common/claw.properties.in
   ${CMAKE_CURRENT_BINARY_DIR}/claw.properties
   @ONLY
 )
