Separated unit tests and common generated src

--- a/cx2t/CMakeLists.txt
+++ b/cx2t/CMakeLists.txt
@@ -2,10 +2,13 @@
 # See LICENSE file for more information
 
 set(CX2T_COMMON_DIR "${CMAKE_CURRENT_SOURCE_DIR}/common")
+set(CX2T_GEN_SRC_DIR "${CMAKE_BINARY_DIR}/generated-src")
+set(CX2T_UT_GEN_SRC_DIR "${CMAKE_BINARY_DIR}/ut-generated-src")
+set(CX2T_PROPERTIES_DIR "${CMAKE_CURRENT_BINARY_DIR}/common")
 
 configure_file(
   ${CMAKE_CURRENT_SOURCE_DIR}/common/claw.properties.in
-  ${CMAKE_CURRENT_BINARY_DIR}/claw.properties
+  ${CX2T_PROPERTIES_DIR}/claw.properties
   @ONLY
 )
 
